# adrian-services

./: .eslintrc.js  .gitignore  Dockerfile  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: congo-gke.yml
bench/: ids.js  json-output.json  k6.js  notes.md  object.json  output-2k.json  output.json  stream-output.json
client/: fetchReviews.js  index.js
client/Components/: Images.jsx  Mentions.jsx  Star.jsx  WriteReview.jsx  app.jsx  review.jsx
database/: Review.js  addTimestamps.js  cassandra.js  deleteData.js  index.js  plan.md  schema.cql  seed.js  test.js
database/scripts/: addTimestamps.js  seed.js
k8s/kustomize/base/: deployment.yaml  kustomization.yaml  namespace.yaml  pod.yaml
public/: bundle.js  index.html  style.css
server/: server.js
test/: test.js
uuidgen/: README.md  bench.js  package.json
uuidgen/lib/: index.js
uuidgen/native/: Cargo.toml
uuidgen/native/src/: lib.rs
